# fintrek

./: pyproject.toml
src/: com_ui.py  db_conn.py  fintrek.py  fintrek.qss  fintrek_config.py
src/sql/: create_finances_table.sql  insert_finances_table.sql  select_finances_table.sql
tests/: README.md
