[project]
name = "fintrek"
description = "FINTREK is a financial tracker app that helps you manage your budget. With FINTREK, you can set your budget and track your financial progress month by month."
version = "1.0.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
    ".", "src", "tests"
]
